# rest-client-rust

./: Cargo.toml  LICENSE.txt  README.md
src/: main.rs
