[package]
name = "simple-rest-client"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
colored = "2.0.0"
serde_with = "2.0.1"

[[bin]]
edition = "2021"
name = "simple-rest-client"
path = "src/main.rs"